--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A rss reader",
   "license": "MIT",
   "repository": {
-      "type": "git",
-      "url": "https://github.com/kevbui/bruit"
+    "type": "git",
+    "url": "https://github.com/kevbui/bruit"
   },
   "author": {
     "name": "Kevin Bui",
@@ -26,7 +26,8 @@
     "electron"
   ],
   "dependencies": {
-    "electron-debug": "^1.0.0"
+    "electron-debug": "^1.0.0",
+    "electron-window-state": "^3.0.3"
   },
   "devDependencies": {
     "devtron": "^1.1.0",
