--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   ],
   "dependencies": {
     "electron-debug": "^1.0.0",
-    "electron-window-state": "^3.0.3"
+    "electron-window-state": "^3.0.3",
+    "feedparser": "^1.1.4"
   },
   "devDependencies": {
     "devtron": "^1.1.0",
