--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "electron-debug": "^1.0.0",
     "electron-window-state": "^3.0.3",
+    "feedly": "^0.1.6",
     "feedparser": "^1.1.4"
   },
   "devDependencies": {
